flyspell, nix more keybinds etc

--- a/config.org
+++ b/config.org
@@ -59,6 +59,7 @@ This literate config is was started from the excellent [[https://github.com/Mini
   - [[#ranger][Ranger]]
   - [[#dashboard][Dashboard]]
   - [[#browse-kill-ring][Browse Kill-Ring]]
+  - [[#flyspell][Flyspell]]
 - [[#runtime-performance][Runtime Performance]]
 
 * Important to load first
@@ -179,8 +180,20 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
     (general-create-definer my-local-leader
       :prefix ","
       )
+
+    ;; Add some eglot related things to , because my muscle memory demands it 
+    (my-local-leader
+      :states '(normal visual)
+  	;; If I only enable this in eglot-mode-map then setting major-mode specific binds override this one
+  	;;:keymaps 'eglot-mode-map
+  	"g" '(:ignore t :wk "Eglot goto")
+  	"g d" '(xref-find-definitions :wk "Goto Definition")
+  	"g D" '(xref-find-definitions-other-window :wk "Goto Definition (other window)")
+  	"g r" '(xref-find-references :wk "Find references")
+  	"d" '('eldoc-doc-buffer :wk "Documentation")
+  	)
     
-    ;; Set up 'SPC' as the leader key
+    ;; Set up 'SPC' as primary leader key
     (general-create-definer start/leader-keys
       :states '(normal insert visual motion emacs)
       :keymaps 'override
@@ -200,22 +213,6 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
       )
 
     (start/leader-keys
-      "c" '(:ignore t :wk "Code")
-      "c l" '(comment-line :wk "Toggle Comments")
-      )
-
-    (start/leader-keys
-      "f" '(:ignore t :wk "Find")
-      "f c" '((lambda () (interactive) (find-file "~/.config/emacs/config.org")) :wk "Edit emacs config")
-      "f r" '(consult-recent-file :wk "Recent files")
-      "f f" '(consult-fd :wk "Fd search for files")
-      "f g" '(consult-ripgrep :wk "Ripgrep search in files")
-      "f l" '(consult-line :wk "Find line")
-      "f i" '(consult-imenu :wk "Imenu buffer locations")
-      "f s" '(save-buffer :wk "Save Buffer")
-      )
-
-    (start/leader-keys
       "b" '(:ignore t :wk "Buffer Bookmarks")
       "b b" '(consult-buffer :wk "Switch buffer")
       "b d" '(kill-current-buffer :wk "Kill buffer")
@@ -226,6 +223,11 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
       "b j" '(consult-bookmark :wk "Bookmark jump")
       "b s" '(scratch-buffer :wk "Scratch Buffer")
   	"b s" '(view-echo-area-messages :wk "Messages Buffer")
+      )
+
+    (start/leader-keys
+      "c" '(:ignore t :wk "Code")
+      "c l" '(comment-or-uncomment-region :wk "Toggle Comments")
       )
 
     (start/leader-keys
@@ -248,37 +250,50 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
       )
 
     (start/leader-keys
+      "f" '(:ignore t :wk "Find")
+      "f c" '((lambda () (interactive) (find-file "~/.config/emacs/config.org")) :wk "Edit emacs config")
+      "f r" '(consult-recent-file :wk "Recent files")
+      "f f" '(consult-fd :wk "Fd search for files")
+      "f g" '(consult-ripgrep :wk "Ripgrep search in files")
+      "f l" '(consult-line :wk "Find line")
+      "f i" '(consult-imenu :wk "Imenu buffer locations")
+      "f s" '(save-buffer :wk "Save Buffer")
+      )
+
+    (start/leader-keys
       "g" '(:ignore t :wk "Git")
       "g s" '(magit-status :wk "Magit status")
   	"g b" '(magit-blame :wk "Git blame")
   	"g l" '(git-link :wk "Link to selection")
       )
 
+    ;; TODO: It would be nice if I could just rebind C-h to SPC h
     (start/leader-keys
       "h" '(:ignore t :wk "Help") ;; To get more help use C-h commands (describe variable, function, etc.)
+    	"h k" '(describe-key :wk "Describe Key")
+    	"h s" '(describe-symbol :wk "Describe Symbol")
+    	"h v" '(describe-variable :wk "Describe Variable")
+    	"h f" '(describe-function :wk "Describe Function")
+    	"h b" '(describe-bindings :wk "Describe Bindings")
       )
 
     (start/leader-keys
-      "s" '(:ignore t :wk "Show")
-      "s e" '(eat :wk "Eat terminal")
-  	"s k" '(browse-kill-ring :wk "Show kill-ring")
-      )
-
-    (start/leader-keys
-      "t" '(:ignore t :wk "Toggle")
-      "t t" '(visual-line-mode :wk "Toggle truncated lines (wrap)")
-      "t l" '(display-line-numbers-mode :wk "Toggle line numbers")
-      )
-
-    (start/leader-keys
-      "w" '(:ignore t :wk "Windows and Workspaces")
-      "w h" '(evil-window-left :wk "Window left")
-      "w l" '(evil-window-right :wk "Window right")
-      "w j" '(evil-window-down :wk "Window Down")
-      "w k" '(evil-window-up :wk "Window Up")
-      "w /" '(evil-window-vsplit :wk "Vertical Split")
-      "w -" '(evil-window-split :wk "Vertical Split")
-      "w d" '(evil-window-delete :wk "Close window")
+      "l" '(:ignore t :wk "Tabspaces")
+      "l C" '(tabspaces-clear-buffers :wk "Clear all Buffers")
+      "l b" '(tabspaces-switch-to-buffer :wk "Switch to Buffer")
+      "l d" '(tabspaces-close-workspace :wk "Close Workspace")
+      "l k" '(tabspaces-kill-buffers-close-workspace :wk "Kill Buffers and Close Workspace")
+      "l o" '(tabspaces-open-or-create-project-and-workspace :wk "Open Project and Workspace")
+      "l r" '(tabspaces-remove-current-buffer :wk "Remove current buffer")
+      "l R" '(tabspaces-restore-session :wk "Restore previous session")
+      "l l" '(tabspaces-switch-or-create-workspace :wk "Switch or Create Workspace")
+      "l t" '(tabspaces-switch-buffer-and-tab :wk "Switch Buffer and tab")
+      ;; General Tab Control
+      "l TAB" '(tab-previous :wk "Previous Tab")
+      "l L" '(tab-move :wk "Move Tab Right")
+      "l H" '((lambda () 
+                (tab-move -1))
+          	:wk "Move Tab Left")
       )
 
     (start/leader-keys
@@ -305,25 +320,6 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
       "p x" '(project-execute-extended-command :wk "Execute extended command")
       "p o" '(project-any-command :wk "Execute any command")
       )
-
-    (start/leader-keys
-      "l" '(:ignore t :wk "Tabspaces")
-      "l C" '(tabspaces-clear-buffers :wk "Clear all Buffers")
-      "l b" '(tabspaces-switch-to-buffer :wk "Switch to Buffer")
-      "l d" '(tabspaces-close-workspace :wk "Close Workspace")
-      "l k" '(tabspaces-kill-buffers-close-workspace :wk "Kill Buffers and Close Workspace")
-      "l o" '(tabspaces-open-or-create-project-and-workspace :wk "Open Project and Workspace")
-      "l r" '(tabspaces-remove-current-buffer :wk "Remove current buffer")
-      "l R" '(tabspaces-restore-session :wk "Restore previous session")
-      "l l" '(tabspaces-switch-or-create-workspace :wk "Switch or Create Workspace")
-      "l t" '(tabspaces-switch-buffer-and-tab :wk "Switch Buffer and tab")
-      ;; General Tab Control
-      "l TAB" '(tab-previous :wk "Previous Tab")
-      "l L" '(tab-move :wk "Move Tab Right")
-      "l H" '((lambda () 
-                (tab-move -1))
-          	:wk "Move Tab Left")
-      )
     
     (start/leader-keys
       "q" '(:ignore t :wk "Quit / Session")
@@ -332,8 +328,33 @@ A keybinding framework to set keybindings easily. Uses https://github.com/noctui
                 (load-file "~/SyncBox/new.emacs.d/init.el"))
           	:wk "Reload Emacs config")
   	)
-    )
 
+    (start/leader-keys
+      "s" '(:ignore t :wk "Show / Spell")
+      "s e" '(eat :wk "Eat terminal")
+  	"s k" '(browse-kill-ring :wk "Show kill-ring")
+      "s c" '(flyspell-correct-word-before-point :wk "Correct word at point")
+      "s s" '(flyspell-toggle :wk "Toggle flyspell")
+  	"s n" '(evil-next-flyspell-error :wk "Next spelling error")
+      )
+
+    (start/leader-keys
+      "t" '(:ignore t :wk "Toggle")
+      "t t" '(visual-line-mode :wk "Toggle truncated lines (wrap)")
+      "t l" '(display-line-numbers-mode :wk "Toggle line numbers")
+      )
+
+    (start/leader-keys
+      "w" '(:ignore t :wk "Windows and Workspaces")
+      "w h" '(evil-window-left :wk "Window left")
+      "w l" '(evil-window-right :wk "Window right")
+      "w j" '(evil-window-down :wk "Window Down")
+      "w k" '(evil-window-up :wk "Window Up")
+      "w /" '(evil-window-vsplit :wk "Vertical Split")
+      "w -" '(evil-window-split :wk "Vertical Split")
+      "w d" '(evil-window-delete :wk "Close window")
+      )
+    )
 #+end_src
 
 * Good Defaults
@@ -515,8 +536,9 @@ Use visual block to uncomment easily in Org documents (C-v).
 
   (use-package eglot
     :ensure nil ;; Don't install eglot because it's now built-in
-    :hook ((python-mode python-ts-mode) . eglot-ensure)
+    :hook ((python-mode python-ts-mode nix-mode) . eglot-ensure)
     :custom
+    (add-to-list 'eglot-server-programs '(nix-mode . ("nil")))
     (eglot-events-buffer-size 0) ;; No event buffers (Lsp server logs)
     (eglot-autoshutdown t);; Shutdown unused servers.
     (eglot-report-progress nil) ;; Disable lsp server logs (Don't show lsp messages at the bottom, java)
@@ -824,6 +846,25 @@ Org-tempo allows for '<s' followed by TAB to expand to a begin_src tag.
       :after org)
 #+end_src
 
+*** TODO nix
+#+begin_src emacs-lisp
+  (use-package nix-mode)
+#+end_src
+
+**** Keybindings
+
+A bunch of language specific key binds, using ~,~ as the leader key.
+
+#+begin_src emacs-lisp
+  (my-local-leader
+    :states 'normal
+    :keymaps 'nix-mode-map
+    "f" 'nix-flake
+    )
+#+end_src
+*** TODO Rust
+https://github.com/emacs-rustic/rustic
+
 ** Terminal
 *** Eat
 Eat(Emulate A Terminal) is a terminal emulator within Emacs.
@@ -839,7 +880,7 @@ We setup eat with eshell, if you want to use bash, zsh etc., check out their git
     :custom
     ;; You can customize Combobulate's key prefix here.
     ;; Note that you may have to restart Emacs for this to take effect!
-    (combobulate-key-prefix "C-c o")
+    (combobulate-key-prefix "SPC o")
     :hook ((prog-mode . combobulate-mode))
     ;; Amend this to the directory where you keep Combobulate's source
     ;; code.
@@ -919,6 +960,10 @@ Creates URLs to forges
     :custom
     (git-link-use-commit t)
   )
+#+end_src
+*** git-timemachine
+#+begin_src emacs-lisp
+(use-package git-timemachine)
 #+end_src
 ** Corfu
 Enhances in-buffer completion with a small completion popup.
@@ -1009,7 +1054,7 @@ Recomended for packages like vertico, corfu.
 - Nerd-icons-completion: Adds icons to completion candidates using the built in completion metadata functions.
 
 We use this packages, because they use emacs native functions. Unlike Ivy or Helm.
-One alternative is ivy and counsel, check out the [[https://github.com/MiniApollo/kickstart.emacs/wiki][project wiki]] for more inforomation.
+One alternative is ivy and counsel, check out the [[https://github.com/MiniApollo/kickstart.emacs/wiki][project wiki]] for more information.
 #+begin_src emacs-lisp
   (use-package vertico
     :init
@@ -1240,6 +1285,39 @@ Which-key is a helper utility for keychords (which key to press).
 ** Browse Kill-Ring
 #+begin_src emacs-lisp
   (use-package browse-kill-ring)
+#+end_src
+
+** Flyspell
+I want to have spell checking, because I am not good at the spelling, so I auto-enable flyspell.
+This auto-detect is taken from here: https://www.emacswiki.org/emacs/FlySpell#h5o-3
+#+begin_src emacs-lisp
+  (defun flyspell-on-for-buffer-type ()
+    "Enable Flyspell appropriately for the major mode of the current buffer.  Uses `flyspell-prog-mode' for modes derived from `prog-mode', so only strings and comments get checked.  All other buffers get `flyspell-mode' to check all text.  If flyspell is already enabled, does nothing."
+    (interactive)
+    (if (not (symbol-value flyspell-mode)) ; if not already on
+  	  (progn
+  		(if (derived-mode-p 'prog-mode)
+  			(progn
+  			  (message "Flyspell on (code)")
+  			  (flyspell-prog-mode))
+  		  ;; else
+  		  (progn
+  			(message "Flyspell on (text)")
+  			(flyspell-mode 1)))
+  		;; I tried putting (flyspell-buffer) here but it didn't seem to work
+  		)))
+
+  (defun flyspell-toggle ()
+    "Turn Flyspell on if it is off, or off if it is on.  When turning on, it uses `flyspell-on-for-buffer-type' so code-vs-text is handled appropriately."
+    (interactive)
+    (if (symbol-value flyspell-mode)
+  	  (progn ; flyspell is on, turn it off
+  		(message "Flyspell off")
+  		(flyspell-mode -1))
+  										; else - flyspell is off, turn it on
+      (flyspell-on-for-buffer-type)))
+
+  (add-hook 'find-file-hook 'flyspell-on-for-buffer-type)
 #+end_src
 * Runtime Performance
 Dial the GC threshold back down so that garbage collection happens more frequently but in less time.
