--- a/config.org
+++ b/config.org
@@ -1140,7 +1140,7 @@ Recomended for packages like vertico, corfu.
     (completion-category-overrides '((file (styles basic partial-completion)))))
 #+end_src
 
-** Vertico and Marginalia
+** TODO Vertico and Marginalia
 - Vertico: Provides a performant and minimalistic vertical completion UI based on the default completion system.
 - Savehist: Saves completion history.
 - Marginalia: Adds extra metadata for completions in the margins (like descriptions).
@@ -1154,7 +1154,7 @@ One alternative is ivy and counsel, check out the [[https://github.com/MiniApoll
     (vertico-mode)
     :custom
     (vertico-count 20)
-  )
+    )
 
   (use-package vertico-posframe
     :init
@@ -1163,26 +1163,30 @@ One alternative is ivy and counsel, check out the [[https://github.com/MiniApoll
                                           (undecorated  . nil))) ;; Rounded frame
     :config
     (vertico-posframe-mode 1)
-    (setq vertico-posframe-width        120                      ;; Narrow frame
-          vertico-posframe-height       vertico-count            ;; Default height
-          ;; Don't create posframe for these commands
-          vertico-multiform-commands    '((consult-line    (:not posframe))
-                                          (consult-ripgrep (:not posframe))))
+    :custom
+    (vertico-posframe-width        120)                      ;; Narrow frame
+    (vertico-posframe-height       vertico-count)            ;; Default height
+    ;; Don't create posframe for these commands
+    ;; TODO: this isn't working
+    (vertico-multiform-commands    '((consult-line    (:not posframe))
+                                     (consult-ripgrep (:not posframe))
+                                     (consult-imenu   (:not posframe)))
+  								 )
     )
 
-  (savehist-mode) ;; Enables save history mode
+    (savehist-mode) ;; Enables save history mode
 
-  (use-package marginalia
-    :after vertico
-    :init
-    (marginalia-mode))
+    (use-package marginalia
+  	:after vertico
+  	:init
+  	(marginalia-mode))
 
-  (use-package nerd-icons-completion
-    :after marginalia
-    :config
-    (nerd-icons-completion-mode)
-    :hook
-    ('marginalia-mode-hook . 'nerd-icons-completion-marginalia-setup))
+    (use-package nerd-icons-completion
+  	:after marginalia
+  	:config
+  	(nerd-icons-completion-mode)
+  	:hook
+  	('marginalia-mode-hook . 'nerd-icons-completion-marginalia-setup))
 #+end_src
 
 *** Project wide text search from doomemacs
